--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "ejs": "2.3.3",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "querystring": "~0.2.0",
+    "request": "~2.34.0",
+    "cookie-parser": "~1.3.5"
   },
   "engines": {
     "node": "0.12.7"
