--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "angular-moment": "^0.10.3",
+    "cookie-parser": "~1.3.5",
     "ejs": "2.3.3",
     "express": "4.13.3",
+    "moment": "^2.10.6",
     "querystring": "~0.2.0",
-    "request": "~2.34.0",
-    "cookie-parser": "~1.3.5"
+    "request": "~2.34.0"
   },
   "engines": {
     "node": "0.12.7"
