--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular-moment": "^0.10.3",
     "cookie-parser": "~1.3.5",
+    "dotenv": "^1.2.0",
     "ejs": "2.3.3",
     "express": "4.13.3",
     "moment": "^2.10.6",
