--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "angular-moment": "^0.10.3",
-    "cookie-parser": "~1.3.5",
-    "dotenv": "^1.2.0",
-    "ejs": "2.3.3",
-    "express": "4.13.3",
-    "moment": "^2.10.6",
-    "querystring": "~0.2.0",
-    "request": "~2.34.0"
+    "angular-moment": "1.0.1",
+    "cookie-parser": "1.4.3",
+    "dotenv": "4.0.0",
+    "ejs": "2.5.6",
+    "express": "4.15.3",
+    "moment": "2.18.1",
+    "querystring": "0.2.0",
+    "request": "2.81.0"
   },
   "engines": {
     "node": "8.1.4"
